running from jars on windows